<resources>
    <string name="app_name">PopularMovies_1</string>

    <string name="toprated_movie">topRatedMovie</string>
    <string name="sortValue">sortValue</string>
    <string name="noData">Sorry, There is no data, App is closing</string>
    <string name="sort_title">What type of sorting do you prefer?</string>
    <string name="sort_topRated">Top Rated Movies</string>
    <string name="sort_Popular">Popular Movies</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="movieId">movieId</string>
    <string name="popular_movie">popularMovie</string>
    <string name="movie_title">Movie Title: %1$s</string>
    <string name="rating">Vote Average: %1$f</string>
    <string name="release_date"> release date: %1$s</string>
    <string name="plot"> Plot: %1$s</string>
    <string name="sortDesc">Sort Movie List</string>
    <string name="img_movie_desc">Poster Movie</string>
    <string name="movie_adapter">movie adapter</string>
    <string name="recyclerview_pos">recyclerviewPosition</string>

    <string name="author_name">Author Name:</string>
    <string name="review">The Review:</string>
    <string name="no_reviews">Sorry, There are no reviews to be shown</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="movie_pref">moviePreferences</string>
    <string name="favorite_movie">favoriteMovie</string>
    <string name="sort_Favorites">My Favorite Movies</string>
    <string name="movie_trailer">Movie Trailer:</string>
    <string name="favorite_msg">Movie \" %1$s \" has been added to Favorite list</string>
    <string name="favorite_msg_error">Movie was already added to favorite lists, it\'s removed NOW </string>
    <string name="noFvorite">There\'re no favorite movies</string>
</resources>
