<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightgrey"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_title" />

    <RadioButton
        android:id="@+id/sort_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_sort"
        android:text="@string/sort_topRated"
        android:textColor="@color/colorPrimary" />

    <RadioButton
        android:id="@+id/sort_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sort_top"
        android:text="@string/sort_Popular"
        android:textColor="@color/colorPrimary" />

    <RadioButton
        android:id="@+id/sort_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sort_popular"
        android:text="@string/sort_Favorites"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sort_favorites"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/colorAccent"
            android:text="@string/action_ok"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/button_cancdl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/action_cancel"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</RelativeLayout>
